--- a/package.json
+++ b/package.json
@@ -5,24 +5,31 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --env development",
-    "build": "webpack --env production"
+    "build": "webpack --env production",
+    "analyze": "source-map-explorer 'dist/*.js'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.4.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^2.1.1",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
+    "prepack-webpack-plugin": "^1.1.2",
     "sass-loader": "^7.1.0",
+    "source-map-explorer": "^2.0.0",
+    "terser-webpack-plugin": "^1.3.0",
     "url-loader": "^2.0.0",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.3",
+    "webpack-dashboard": "^3.0.7",
     "webpack-dev-server": "^3.7.1",
     "webpack-merge": "^4.2.1"
   }
